tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__OceansinaBottle-pDcGv1OwTsueRoVXFZ6wHw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6030406535197143071,
  "prerequisites": [
    15656564488006231233,
    3244
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After managing to create an artificial universe capable of storing near-infinite amounts of items, you applied this same technology to your Fluid Digital Singularity Cell to create this truly magnificent piece of tech. This allows you to store up to 5 different types of fluids without the universe collapsing in on itself.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oceans in a Bottle",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15656564488006231233,
    3244
  ],
  "rewards": [],
  "tasks": []
}
