tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__OptimizingPatter-opVg0YQ3RCiBbG62PozSLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9527158476364370477,
  "prerequisites": [
    15864577584844137134,
    1327
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You have probably already seen the button called §6Optimize Patterns§r when making an order in your AE system, now it's time to put it in the good use!\n\nTo unlock this feature, just add a Pattern Optimization Matrix block to your AE system (you only need one).\n\n§l# What does it do?\n§r\nThis feature allows you to multiply patterns that are needed in large amounts.\n\n1. After calculating a big order, just click §6Optimize Patterns§r and you will be welcomed by a new window.\n2. There you specify how much you wish for a singular pattern to be ordered (maximum amount of steps), we recommend putting it at 1000 or 100, [warn]remember that over-optimizing patterns could lead to longer waiting times[/warn]. At this point, you can also disable singular patterns from optimization by clicking on them, but there shouldn't be any unwanted patterns anyway if you already excluded them by toggling a button in unwanted interfaces.\n§\n\n3. Click §6Optimize§r and you are done! Try ordering again to see the changes in pattern steps\n\nAll changes are [warn]permanent and can't be reverted automatically[/warn] so make sure that you have excluded all unwanted interfaces (the §6Allow Pattern Optimization§r button is §7GRAY§r) like:\n- Single Assembly Line interfaces\n- Extreme Crafting interfaces\n- And any interface that doesn't have (almost)infinite buffer at the other side (inf. chest/storage cells)\nPatterns are only multiplied by powers of 2, so your AAL patterns should be safe.\n\n[note]If you are still confused about maximum order steps here's an example:\nOrdering an EOH calculates that it will need 1,000,008 UHV superconductors crafted (41667 steps, 24 UHV SC patterned), now you proceed to optimize patterns and specify that you wish it to do 1000 steps maximum, it will multiply your pattern 64 times to achieve that goal (41667 / 64 ~= 652 which is lower or equal to 1000). After clicking optimize, UHV SC pattern will now output 1536 UHV SC (24 before).[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Optimizing Patterns in Late Game!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15864577584844137134,
    1327
  ],
  "rewards": [],
  "tasks": []
}
