tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__OrderingEssentia-AAAAAAAAAAAAAAAAAAAJ8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2546,
  "prerequisites": [
    2512
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Distillation Pattern Encoder allows you to automatically melt down items in your alchemical furnace to provide essentia.\nFirst, place something that is already scanned in the device, along with a blank pattern. You can create the pattern by clicking the button, or click the different aspects to select one that is not the highest. This will create a pattern of item -> essentia. Then use an ME Interface pointing at a furnace with the pattern in it. You can now craft that type of essentia the same way you would a normal craft, but through the Essentia Terminal.\n\n[warn]There isn't a way to have the system craft essentia on demand for a craft, unfortunately.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ordering Essentia",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2512
  ],
  "rewards": [],
  "tasks": []
}
