tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__PullingEssentiaI-AAAAAAAAAAAAAAAAAAAJ0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2514,
  "prerequisites": [
    1309
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Attach to either Alembics or the output of the Advanced Alchemical Furnace. If that doesn't work, have them pipe to a jar and import from there. You can finally get rid of your shifty-eyed golems.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pulling Essentia Into the Network",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1309
  ],
  "rewards": [],
  "tasks": []
}
