tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__PurifyingtheImpu-AAAAAAAAAAAAAAAAAAAFEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1296,
  "prerequisites": [
    181
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The purified versions of Nether, Certus and Fluix crystals can be grown from seeds made in the assembler from crystal dust and sand.\n\nThey can be grown in-world for free by dropping them in water, or at a much faster rate in a GT Autoclave.\n\n[note]Distilled water reduces the recipe time in the Autoclave by half.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Purifying the Impure",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    181
  ],
  "rewards": [],
  "tasks": []
}
